# openglprogram

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
resources/shaders/: simple.frag  simple.vert
src/resources/: shader.cpp
